add SimulatedAnnealing, fix bugs, and add another small changes